--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="de" class="scroll-smooth">
 <head>
+    <meta name="description" content="Hilfe bei Burnout für ambitionierte Frauen. Entdecken Sie die Burnout-to-Balance-Blaupause von Psychologin Maya Berger und finden Sie Ihre Kraft wieder.">
+<meta name="keywords" content="burnout, erschöpfung, coaching, psychologin, maya berger, burnout hilfe frauen, stress, balance">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Die Burnout-to-Balance-Blaupause | Bewerbung</title>
@@ -256,9 +258,9 @@
                     <p class="mt-2 text-slate-300">(Plätze streng limitiert)</p>
                     <p class="mt-4 text-lg text-slate-200">Da dieses Programm meine intensive persönliche Begleitung beinhaltet (insbesondere das Voice-Messaging und die 1:1-Analyse), kann ich nur eine sehr begrenzte Anzahl von Frauen gleichzeitig aufnehmen.</p>
                     <p class="mt-4 text-lg text-slate-200">Wenn Sie spüren, dass es an der Zeit ist, die Kontrolle zurückzugewinnen und die Frau wiederzufinden, die vor lauter Funktionieren verstummt ist, dann bewerben Sie sich jetzt.</p>
-                    <a href="#" class="mt-8 inline-block cta-button bg-cyan-500 text-white font-bold py-4 px-10 text-xl rounded-lg hover:bg-cyan-600">
-                        &gt;&gt; Ja, ich bewerbe mich für die kostenlose Blaupause (Wert: 3.600 €) &lt;&lt;
-                    </a>
+                    <a href="https://form.jotform.com/250701744204346" target="_blank" class="cta-button bg-cyan-600 text-white font-semibold py-2 px-5 rounded-lg hover:bg-cyan-700">
+    Jetzt bewerben
+</a>
                     <p class="mt-4 text-slate-400">Nachdem Sie das kurze Formular ausgefüllt haben, werde ich mich persönlich bei Ihnen melden, um die nächsten Schritte zu besprechen. Es gibt keinen Haken, nur eine einmalige Gelegenheit für die richtigen Frauen.</p>
                 </div>
             </div>
