index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -258,9 +258,10 @@
                     <p class="mt-2 text-slate-300">(Plätze streng limitiert)</p>
                     <p class="mt-4 text-lg text-slate-200">Da dieses Programm meine intensive persönliche Begleitung beinhaltet (insbesondere das Voice-Messaging und die 1:1-Analyse), kann ich nur eine sehr begrenzte Anzahl von Frauen gleichzeitig aufnehmen.</p>
                     <p class="mt-4 text-lg text-slate-200">Wenn Sie spüren, dass es an der Zeit ist, die Kontrolle zurückzugewinnen und die Frau wiederzufinden, die vor lauter Funktionieren verstummt ist, dann bewerben Sie sich jetzt.</p>
-                    <a href="https://form.jotform.com/250701744204346" target="_blank" class="cta-button bg-cyan-600 text-white font-semibold py-2 px-5 rounded-lg hover:bg-cyan-700">
-    Jetzt bewerben
-</a>
+                    <a href="https://form.jotform.com/250701744204346" target="_blank" class="mt-8 inline-block cta-button bg-cyan-500 text-white font-bold py-4 px-10 text-xl rounded-lg hover:bg-cyan-600">
+                        &gt;&gt; Ja, ich bewerbe mich für die kostenlose Blaupause (Wert: 3.600 €) &lt;&lt;
+                    </a>
+
                     <p class="mt-4 text-slate-400">Nachdem Sie das kurze Formular ausgefüllt haben, werde ich mich persönlich bei Ihnen melden, um die nächsten Schritte zu besprechen. Es gibt keinen Haken, nur eine einmalige Gelegenheit für die richtigen Frauen.</p>
                 </div>
             </div>
