--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-center h-16">
                 <div class="flex-shrink-0 text-center">
-                    <a href="#" class="text-lg sm:text-xl font-bold text-slate-800">Maya Berger | Psychologin für Führungskräfte</a>
+                    <a href="#" class="text-lg sm:text-xl font-bold text-slate-800">Maya Berger | Psychologin für Führungskräfte und Thought Leader</a>
                 </div>
             </div>
         </div>
