--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <section class="py-20 md:py-24 bg-slate-800 text-white">
             <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8" data-aos="fade-up">
-                <img src="Berger.jpeg" alt="Portraitfoto von Maya Berger, Psychologin" ... >
+                <img src="Berger.jpeg" alt="Portraitfoto von Maya Berger, Psychologin" class="mx-auto h-32 w-32 rounded-full object-cover shadow-lg mb-8 border-4 border-slate-700">
                 <h2 class="text-3xl md:text-4xl font-bold text-center">Ihre Investition heute: <span class="text-cyan-400">Nur 49 €</span></h2>
                 <div class="mt-8 text-lg text-slate-300 prose prose-invert max-w-none">
                     <p class="text-center">Das ist kein Tippfehler. Sie erhalten das komplette 3.647-€-Programm für eine einmalige Investition von nur 49 €.</p>
