--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
 
         <section class="py-20 md:py-24 bg-slate-800 text-white">
             <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8" data-aos="fade-up">
-                <img src="Berger.jpeg" alt="Portraitfoto von Maya Berger, Psychologin" class="mx-auto h-32 w-32 rounded-full object-cover shadow-lg mb-8 border-4 border-slate-700">
                 <h2 class="text-3xl md:text-4xl font-bold text-center">Ihre Investition heute: <span class="text-cyan-400">Nur 49 €</span></h2>
                 <div class="mt-8 text-lg text-slate-300 prose prose-invert max-w-none">
                     <p class="text-center">Das ist kein Tippfehler. Sie erhalten das komplette 3.647-€-Programm für eine einmalige Investition von nur 49 €.</p>
@@ -211,7 +210,6 @@
             </div>
         </section>
         
-        <!-- ### GRAFIK AN NEUER POSITION ### -->
         <section class="py-20 md:py-24 bg-slate-50">
             <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center" data-aos="fade-up">
                 <h2 class="text-3xl font-bold text-slate-800">Vom Gedankenkarussell zur inneren Ruhe</h2>
@@ -332,7 +330,36 @@
             <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl font-bold text-center text-slate-900">Ihre Fragen, ehrlich beantwortet</h2>
                 <div class="mt-10 space-y-4">
+                    <!-- ### NEUER FAQ-EINTRAG ### -->
                     <div class="bg-white p-5 rounded-lg border border-slate-200" data-aos="fade-up">
+                        <details>
+                            <summary class="font-semibold text-lg cursor-pointer flex justify-between items-center">
+                                <span>Wer bin ich und warum sollten Sie mir vertrauen?</span>
+                                <svg class="h-6 w-6 shrink-0 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+                            </summary>
+                            <div class="mt-4 text-slate-600 prose max-w-none">
+                                <p>Hallo, ich bin Maya. Ich bin klinische Psychologin und die Gründerin von Coffee & Recovery, ein Gruppenprogramm für Frauen mit Burnout Symptomen.</p>
+                                <p>Meine Reise zu diesem Programm begann nicht im Hörsaal, sondern in meiner Praxis. Ich habe immer wieder dasselbe Muster beobachtet: brillante, hochkompetente Frauen, die von außen für ihre Stärke und ihren Erfolg bewundert wurden, während sie innerlich zerbrachen. Sie kamen zu mir, nachdem sie alles "richtige" versucht hatten – den Yoga-Kurs, den Wellness-Urlaub, die Meditations-App – und doch wurde das Gefühl der Leere und Erschöpfung nur größer.</p>
+                                <p>Ich war frustriert von den oberflächlichen Ratschlägen, die diesen Frauen gegeben wurden. Ratschläge, die den enormen Druck und die komplexen psychologischen Muster ignorierten, denen gerade Frauen in Führung und Selbstständigkeit ausgesetzt sind. Mir wurde klar: Diese Frauen brauchen keine weiteren To-Do's auf ihrer Liste. Sie brauchen eine systematische Entlastung.</p>
+                                <p>Deshalb habe ich meine gesamte Erfahrung gebündelt und diesen Ansatz entwickelt. Meine Arbeit verbindet wissenschaftlich fundierte psychologische Methoden mit praxiserprobten Strategien, die speziell für den anspruchsvollen Alltag erfolgreicher Frauen konzipiert sind. Mein Ziel ist es nicht, Ihnen nur zuzuhören – mein Ziel ist es, Ihnen die Werkzeuge an die Hand zu geben, mit denen Sie sich selbst wieder auf Kurs bringen können. Schnell, tiefgreifend und nachhaltig.</p>
+                                <h4 class="font-semibold text-slate-800 mt-6">Meine Qualifikationen auf einen Blick:</h4>
+                                <ul class="list-disc pl-5">
+                                    <li>Studium der klinischen Psychologie an der Medical School Hamburg</li>
+                                    <li>Über 7 Jahre Erfahrung in der Begleitung von Frauen in Führungspositionen und Selbstständigkeit</li>
+                                    <li>Buch-Autorin "Die Burnout-Falle für erfolgreiche Frauen"</li>
+                                </ul>
+                                <h4 class="font-semibold text-slate-800 mt-6">Was Sie außerdem über meine Philosophie wissen sollten:</h4>
+                                <ul class="list-disc pl-5">
+                                    <li>Ich war selbst eine Meisterin darin, 100 Bälle gleichzeitig in der Luft zu halten. Heute bin ich Expertin darin, die 3 zu finden, die es wirklich wert sind, gefangen zu werden.</li>
+                                    <li>Mich überzeugen Daten aus Studien mehr als oberflächliche Motivationssprüche. Ich glaube an Klarheit und wissenschaftlich fundierte Abkürzungen, nicht an "Motivationssprüche".</li>
+                                    <li>Ich glaube fest daran, dass eine einzige, tiefgreifende Frage mehr verändern kann als 10 Stunden Smalltalk. Effizienz und Tiefe sind für mich kein Widerspruch.</li>
+                                    <li>Meine eigenen Akkus lade ich am liebsten bei langen Spaziergängen auf – ohne Handy, dafür mit klarem Kopf. Ich praktiziere selbst, was ich lehre: bewusste Pausen sind keine Schwäche, sondern die Quelle wahrer Leistungsfähigkeit.</li>
+                                </ul>
+                                <p>Ich glaube fest daran, dass Sie nicht zwischen Ihrem Erfolg und Ihrer seelischen Gesundheit wählen müssen. Ich zeige Ihnen, wie Sie beides haben können. Ich freue mich darauf, Sie kennenzulernen.</p>
+                            </div>
+                        </details>
+                    </div>
+                    <div class="bg-white p-5 rounded-lg border border-slate-200" data-aos="fade-up" data-aos-delay="50">
                         <details>
                             <summary class="font-semibold text-lg cursor-pointer flex justify-between items-center">
                                 <span>Ist das eine Therapie?</span>
@@ -350,7 +377,7 @@
                             <p class="mt-4 text-slate-600">Das Protokoll ist speziell für Frauen mit extrem wenig Zeit konzipiert. Es geht nicht darum, Ihnen mehr Arbeit aufzuhalsen, sondern darum, Ihre bestehende Zeit und Energie effektiver zu nutzen. Das Ziel ist es, Ihnen Zeit und Energie *zurückzugeben*, nicht zu nehmen.</p>
                         </details>
                     </div>
-                    <div class="bg-white p-5 rounded-lg border border-slate-200" data-aos="fade-up" data-aos-delay="200">
+                    <div class="bg-white p-5 rounded-lg border border-slate-200" data-aos="fade-up" data-aos-delay="150">
                         <details>
                             <summary class="font-semibold text-lg cursor-pointer flex justify-between items-center">
                                 <span>Ist das ein Abonnement?</span>
@@ -366,6 +393,7 @@
 
     <footer class="bg-slate-900 text-slate-400">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-12 text-center">
+            <img src="Berger.jpeg" alt="Portraitfoto von Maya Berger, Psychologin" class="mx-auto h-24 w-24 rounded-full object-cover shadow-lg mb-4 border-4 border-slate-800">
             <a href="#" class="text-xl font-bold text-white">Maya Berger</a>
             <p class="mt-2">Psychologin & Expertin für weibliche Erschöpfungsmuster</p>
             <div class="mt-6 flex justify-center space-x-6">
@@ -389,3 +417,4 @@
     </script>
 </body>
 </html>
+
