index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 <h4 class="font-semibold text-slate-800 mt-6">Was Sie außerdem über meine Philosophie wissen sollten:</h4>
                                 <ul class="list-disc pl-5">
                                     <li>Ich war selbst eine Meisterin darin, 100 Bälle gleichzeitig in der Luft zu halten. Heute bin ich Expertin darin, die 3 zu finden, die es wirklich wert sind, gefangen zu werden.</li>
-                                    <li>Mich überzeugen Daten aus Studien mehr als oberflächliche Motivationssprüche. Ich glaube an Klarheit und wissenschaftlich fundierte Abkürzungen, nicht an "Motivationssprüche".</li>
+                                    <li>Mich überzeugen Daten aus Studien mehr als oberflächliche Motivationssprüche. Ich glaube an Klarheit und wissenschaftlich fundierte, praxiserprobte Ansätze.</li>
                                     <li>Ich glaube fest daran, dass eine einzige, tiefgreifende Frage mehr verändern kann als 10 Stunden Smalltalk. Effizienz und Tiefe sind für mich kein Widerspruch.</li>
                                     <li>Meine eigenen Akkus lade ich am liebsten bei langen Spaziergängen auf – ohne Handy, dafür mit klarem Kopf. Ich praktiziere selbst, was ich lehre: bewusste Pausen sind keine Schwäche, sondern die Quelle wahrer Leistungsfähigkeit.</li>
                                 </ul>
@@ -365,7 +365,7 @@
                                 <span>Ist das eine Therapie?</span>
                                 <svg class="h-6 w-6 shrink-0 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
                             </summary>
-                            <p class="mt-4 text-slate-600">Nein. Dieses Protokoll ist ein psychoedukatives Selbsthilfe-Programm und ersetzt keine Psychotherapie. Es ist darauf ausgelegt, Ihnen schnell und gezielt strategische Werkzeuge an die Hand zu geben, um aus der akuten Erschöpfung auszubrechen und kann eine wertvolle Überbrückung der Wartezeit sein.</p>
+                            <p class="mt-4 text-slate-600">Nein. Dieses Protokoll ist ein psychoedukatives Empowerment-Programm und ersetzt keine Psychotherapie. Es ist darauf ausgelegt, Ihnen schnell und gezielt strategische Werkzeuge an die Hand zu geben, um aus der akuten Erschöpfung auszubrechen und kann eine wertvolle zusätzliche Ressource sein.</p>
                         </details>
                     </div>
                     <div class="bg-white p-5 rounded-lg border border-slate-200" data-aos="fade-up" data-aos-delay="100">
@@ -374,7 +374,8 @@
                                 <span>Ich habe doch schon keine Zeit. Wie aufwändig ist das?</span>
                                 <svg class="h-6 w-6 shrink-0 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
                             </summary>
-                            <p class="mt-4 text-slate-600">Das Protokoll ist speziell für Frauen mit extrem wenig Zeit konzipiert. Es geht nicht darum, Ihnen mehr Arbeit aufzuhalsen, sondern darum, Ihre bestehende Zeit und Energie effektiver zu nutzen. Das Ziel ist es, Ihnen Zeit und Energie *zurückzugeben*, nicht zu nehmen.</p>
+                            <p class="mt-4 text-slate-600">Das Programm ist als Entlastungs-System für Frauen mit vollen Kalendern konzipiert. Statt langer Sitzungen erhalten Sie kurze, wirksame Impulse, die Ihnen helfen, Energiefresser zu eliminieren.
+Wir fokussieren uns mit minimalem Aufwand darauf, Ihre größten Energielecks zu schließen. Das Ergebnis: Mehr Freiraum im Kopf und mehr verfügbare Zeit in Ihrem Alltag.</p>
                         </details>
                     </div>
                     <div class="bg-white p-5 rounded-lg border border-slate-200" data-aos="fade-up" data-aos-delay="150">
@@ -383,7 +384,7 @@
                                 <span>Ist das ein Abonnement?</span>
                                 <svg class="h-6 w-6 shrink-0 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
                             </summary>
-                            <p class="mt-4 text-slate-600">Nein. Dies ist eine einmalige Zahlung von 49 €. Es gibt keine versteckten Kosten oder Abonnements.</p>
+                            <p class="mt-4 text-slate-600">Nein. Dies ist eine einmalige Zahlung von 49€. Es gibt keine versteckten Kosten oder Abonnements.</p>
                         </details>
                     </div>
                 </div>
