index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
+    })(window,document,'script','dataLayer','GTM-563TL3PC');</script>
     <!-- End Google Tag Manager -->
 
     <title>Die Burnout-to-Balance-Blaupause | Maya Berger</title>
@@ -71,7 +71,7 @@
 </head>
 <body class="antialiased">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-563TL3PC"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
@@ -326,7 +326,7 @@
                     <p>Wenn Sie spüren, dass es an der Zeit ist, die Kontrolle zurückzugewinnen und die Frau wiederzufinden, die vor lauter Funktionieren verstummt ist, dann ist dies Ihr Moment.</p>
                     <p>Klicken Sie jetzt auf den Button, um sich Ihren Zugang zu sichern, bevor alle Plätze vergeben sind.</p>
                 </div>
-                <!-- ### GEÄNDERTER JOTFORM BUTTON ### -->
+                <!-- ### JOTFORM POPUP BUTTON ### -->
                 <a onclick="JFL_252005673034044.showForm();return false;" class="mt-8 inline-block cta-button bg-cyan-500 text-white font-bold py-3 px-4 text-base sm:py-4 sm:px-10 sm:text-xl rounded-lg hover:bg-cyan-600">
                     Ja, ich sichere mir jetzt die komplette Blaupause für nur 49 € (statt 584,95 €)
                 </a>
@@ -411,7 +411,7 @@
         </div>
     </footer>
 
-    <!-- ### GEÄNDERTER JOTFORM BUTTON ### -->
+    <!-- ### JOTFORM POPUP BUTTON ### -->
     <a onclick="JFL_252005673034044.showForm();return false;" class="fixed bottom-6 right-6 floating-cta-button bg-cyan-600 text-white font-bold py-3 px-5 rounded-lg shadow-lg hover:bg-cyan-700 hover:scale-105 transition-transform duration-300 z-[99]">
         Blueprint sichern
     </a>
