--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
             <a href="#" class="text-xl font-bold text-white">Maya Berger</a>
             <p class="mt-2">Psychologin & Expertin für weibliche Erschöpfungsmuster</p>
             <div class="mt-6 flex justify-center space-x-6">
+                <!-- ### AKTIVIERTE LINKS ### -->
                 <a href="impressum.html" class="hover:text-white transition">Impressum</a>
                 <a href="datenschutz.html" class="hover:text-white transition">Datenschutz</a>
             </div>
