Impressum.html aktualisieren

--- a/Impressum.html
+++ b/Impressum.html
@@ -72,7 +72,7 @@
 
                 <h2>Umsatzsteuer</h2>
                 <p>
-                    Heilkundliche T&auml;tigkeit ist von der Umsatzsteuer gem&auml;&szlig; &sect; 4 Nr. 14a UStG befreit.
+                    Heilbehandlungsähnliche Tätigkeiten sind von der Umsatzsteuer gem&auml;&szlig; &sect; 4 Nr. 14a UStG befreit.
                 </p>
 
                 <h2>Redaktionell verantwortlich</h2>
