--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
             <a href="#" class="text-xl font-bold text-white">Maya Berger</a>
             <p class="mt-2">Psychologin & Expertin für weibliche Erschöpfungsmuster</p>
             <div class="mt-6 flex justify-center space-x-6">
-                <!-- ### AKTIVIERTE LINKS ### -->
-                <a href="impressum.html" class="hover:text-white transition">Impressum</a>
-                <a href="datenschutz.html" class="hover:text-white transition">Datenschutz</a>
+                <!-- ### KORRIGIERTE LINKS ### -->
+                <a href="Impressum.html" class="hover:text-white transition">Impressum</a>
+                <a href="Datenschutz.html" class="hover:text-white transition">Datenschutz</a>
             </div>
             <p class="mt-6 text-sm">&copy; 2025 Maya Berger. Alle Rechte vorbehalten.</p>
         </div>
