--- a/danke-fuer-ihren-kauf/index.html
+++ b/danke-fuer-ihren-kauf/index.html
@@ -47,7 +47,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-center h-16">
                 <div class="flex-shrink-0 text-center">
-                    <a href="index.html" class="text-base sm:text-lg md:text-xl font-bold text-slate-800">Maya Berger | Klinische Psychologin (M.Sc.)</a>
+                    <a href="/" class="text-base sm:text-lg md:text-xl font-bold text-slate-800">Maya Berger | Klinische Psychologin (M.Sc.)</a>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
                     Sie erhalten in Kürze eine E-Mail mit allen Informationen zum Zugang zu Ihrem Fahrplan und den Boni. Bitte prüfen Sie auch Ihren Spam-Ordner.
                 </p>
                 <div class="mt-8">
-                    <a href="index.html" class="inline-block cta-button bg-cyan-500 text-white font-bold py-3 px-6 rounded-lg hover:bg-cyan-600">
+                    <a href="/" class="inline-block cta-button bg-cyan-500 text-white font-bold py-3 px-6 rounded-lg hover:bg-cyan-600">
                         Zurück zur Startseite
                     </a>
                 </div>
@@ -77,12 +77,12 @@
 
     <footer class="bg-slate-900 text-slate-400">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-12 text-center">
-            <img src="Berger.jpeg" alt="Portraitfoto von Maya Berger, Psychologin" class="mx-auto h-24 w-24 rounded-full object-cover shadow-lg mb-4 border-4 border-slate-800">
-            <a href="index.html" class="text-xl font-bold text-white">Maya Berger</a>
+            <img src="../Berger.jpeg" alt="Portraitfoto von Maya Berger, Psychologin" class="mx-auto h-24 w-24 rounded-full object-cover shadow-lg mb-4 border-4 border-slate-800">
+            <a href="/" class="text-xl font-bold text-white">Maya Berger</a>
             <p class="mt-2">Psychologin & Expertin für weibliche Erschöpfungsmuster</p>
             <div class="mt-6 flex justify-center space-x-6">
-                <a href="Impressum.html" class="hover:text-white transition">Impressum</a>
-                <a href="Datenschutz.html" class="hover:text-white transition">Datenschutz</a>
+                <a href="../Impressum.html" class="hover:text-white transition">Impressum</a>
+                <a href="../Datenschutz.html" class="hover:text-white transition">Datenschutz</a>
             </div>
             <p class="mt-6 text-sm">&copy; 2025 Maya Berger. Alle Rechte vorbehalten.</p>
         </div>
